Function - kata's complete

--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -504,7 +504,7 @@
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
-    "    for i in range(len(nums)-1):\n",
+    "    for i in range(0, len(nums)-1):\n",
     "        if nums[i] == 3 and nums[i+1] ==3:\n",
     "            return True\n",
     "    return False\n"
@@ -661,24 +661,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def blackjack(a,b,c): \n",
-    "    if sum((a,b,c)) <= 21:\n",
-    "        return sum((a,b,c))\n",
-    "    elif sum((a,b,c)) <=31 and 11 in (a,b,c):\n",
-    "        return sum((a,b,c)) - 10\n",
+    "    if sum([a,b,c]) <= 21:\n",
+    "        return sum([a,b,c])\n",
+    "    elif sum([a,b,c])-10 <=21 and 11 in [a,b,c]:\n",
+    "        return sum([a,b,c]) - 10\n",
     "    else:\n",
     "        return 'BUST'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -689,7 +689,7 @@
        "18"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,32 +758,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def summer_69(arr):\n",
-    "    if not arr:\n",
-    "        return 0\n",
+    "# def summer_69(arr):\n",
+    "#     if not arr:\n",
+    "#         return 0\n",
     "       \n",
-    "    total = 0\n",
-    "    skip = False \n",
+    "#     total = 0\n",
+    "#     skip = False \n",
     "\n",
-    "    for num in arr: \n",
-    "        if num == 6:\n",
-    "               skip = True\n",
-    "        elif num ==9:\n",
-    "               skip = False\n",
-    "        elif not skip:\n",
-    "               total += num \n",
-    "    return total"
+    "#     for num in arr: \n",
+    "#         if num == 6:\n",
+    "#                skip = True\n",
+    "#         elif num ==9:\n",
+    "#                skip = False\n",
+    "#         elif not skip:\n",
+    "#                total += num \n",
+    "#     return total\n",
+    "def summer_69(arr):\n",
+    "\n",
+    "    total = 0\n",
+    "    add = True\n",
+    "\n",
+    "    for num in arr:\n",
+    "        while add:\n",
+    "            if num != 6:\n",
+    "                total += num\n",
+    "                break\n",
+    "            else:\n",
+    "                add = False\n",
+    "        while not add:\n",
+    "            if num != 9:\n",
+    "                break\n",
+    "            else: \n",
+    "                add = True \n",
+    "                break\n",
+    "    return total\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
@@ -794,7 +814,7 @@
        "9"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
@@ -817,7 +837,7 @@
        "9"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true
    },
@@ -840,7 +860,7 @@
        "14"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,24 +890,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def spy_game(nums):\n",
-    "    sequence = [0,0,7,'x']\n",
-    "    for num in nums:\n",
-    "        if num == sequence[0]:\n",
-    "            sequence.pop(0)   \n",
+    "# def spy_game(nums):\n",
+    "#     sequence = [0,0,7,'x']\n",
+    "#     for num in nums:\n",
+    "#         if num == sequence[0]:\n",
+    "#             sequence.pop(0)   \n",
     "       \n",
-    "    return len(sequence) == 1"
+    "#     return len(sequence) == 1\n",
+    "\n",
+    "def spy_games(nums):\n",
+    "\n",
+    "    code = [0,0,7,'x']\n",
+    "    # [0,7,'x']\n",
+    "    # [7, 'x']\n",
+    "    # ['x'] length = 1\n",
+    "\n",
+    "    for num in nums:\n",
+    "        if num == code[0]:\n",
+    "            code.list(0)\n",
+    "    return len(code) == 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 138,
    "metadata": {
     "collapsed": true
    },
@@ -898,7 +930,7 @@
        "True"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -921,7 +953,7 @@
        "True"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true
    },
@@ -944,7 +976,7 @@
        "False"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,19 +998,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    primes = [2]\n",
-    "    x = 3\n",
+    "  # check for 0 or 1 input\n",
     "    if num < 2:\n",
     "        return 0\n",
+    "    \n",
+    "    \n",
+    "    # store our prime numbers\n",
+    "    primes = [2]\n",
+    "    # counter going up to the input num \n",
+    "    x = 3\n",
+    "    # x is going through every number up to input number\n",
     "    while x <= num:\n",
-    "        for y in primes:  # use the primes list!\n",
+    "        # check if x is prime\n",
+    "        for y in range(3,x,2):\n",
     "            if x%y == 0:\n",
     "                x += 2\n",
     "                break\n",
@@ -992,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -1010,7 +1049,7 @@
        "25"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,23 +1077,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def print_big(letter):\n",
-    "    pass"
+    "    patterns = {1:'  *  ',2:' * * ',3:'*   *',4:'*****',5:'**** ',6:'   * ',7:' *   ',8:'*   * ',9:'*    '}\n",
+    "    alphabet = {'A':[1,2,4,3,3],'B':[5,3,5,3,5],'C':[4,9,9,9,4],'D':[5,3,3,3,5],'E':[4,9,4,9,4]}\n",
+    "    for pattern in alphabet[letter.upper()]:\n",
+    "        print(patterns[pattern])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  *  \n",
+      " * * \n",
+      "*****\n",
+      "*   *\n",
+      "*   *\n"
+     ]
+    }
+   ],
    "source": [
     "print_big('a')"
    ]
@@ -1065,6 +1119,11 @@
    "source": [
     "## Great Job!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -1083,7 +1142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.2 (main, Mar 27 2023, 15:03:16) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "vscode": {
    "interpreter": {
