--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    return (4/3)*(3.14)*(rad**3)"
    ]
   },
   {
@@ -66,26 +66,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if num in range(low,high+1):\n",
+    "        print(f'{num} is in range of low and high')\n",
+    "    else: \n",
+    "        print('It is not in range')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is in the range between 2 and 7\n"
+      "5 is in range of low and high\n"
      ]
     }
    ],
@@ -103,19 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    return num in range(low,high+1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +127,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,28 +155,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    lowercase = 0\n",
+    "    uppercase = 0\n",
+    "\n",
+    "    for char in s:\n",
+    "        if char.isupper():\n",
+    "            uppercase += 1\n",
+    "        elif char.islower():\n",
+    "            lowercase += 1\n",
+    "        else:\n",
+    "            pass \n",
+    "    print(f'OriginalString: {s}')\n",
+    "    print(f'Lowercase count: {lowercase}')\n",
+    "    print(f'Uppercase count: {uppercase}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Could also do this with a dictionary \n",
+    "    \n",
+    "def up_low(s):\n",
+    "    d = {'upper':0, 'lower':0}\n",
+    "\n",
+    "    for char in s:\n",
+    "        if char.isupper():\n",
+    "            d['upper'] += 1\n",
+    "        elif char.islower():\n",
+    "            d['lower'] += 1\n",
+    "        else:\n",
+    "            pass \n",
+    "    print(f'OriginalString: {s}')\n",
+    "    print(f'Lowercase count: {d[\"lower\"]}')\n",
+    "    print(f'Uppercase count: {d[\"upper\"]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "OriginalString: Hello Mr. Rogers, how are you this fine Tuesday?\n",
+      "Lowercase count: 33\n",
+      "Uppercase count: 4\n"
      ]
     }
    ],
@@ -195,19 +233,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    return list(set(lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Can also do it this way\n",
+    "\n",
+    "def unique_list(lst):\n",
+    "    seen_numbers = []\n",
+    "    for number in lst:\n",
+    "        if number not in seen_numbers:\n",
+    "            seen_numbers.append(number)\n",
+    "    return seen_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +270,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,19 +292,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    total = 1\n",
+    "    for num in numbers:\n",
+    "        total = total * num \n",
+    "    return total \n",
+    "\n",
+    "# as we are using multiplication we started at 1. If it had been add we would have started at 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +318,7 @@
        "-24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,19 +339,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "# REMOVE SPACES STRING \n",
+    "    s = s.replace(' ','')\n",
+    "# Check is string is == reversed version of the string\n",
+    "    return s == s[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +363,13 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('hell eh')"
    ]
   },
   {
@@ -331,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -340,21 +402,40 @@
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    # Create a set of entire alphabet \n",
+    "    alphaset = set(alphabet)\n",
+    "    print(alphaset)\n",
+    "    # remove any spaces from the input string \n",
+    "    str1 = str1.replace(' ', '')\n",
+    "    print(str1)\n",
+    "    # Convert input string into all lowercase\n",
+    "    str1 = str1.lower()\n",
+    "    # Grab all unique letters from the string (if you have two a's only care about one set()\n",
+    "    str1 = set(str1)\n",
+    "    # Compare alphbet set == string set input\n",
+    "    return str1 == alphaset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'i', 'o', 'f', 'l', 'j', 'u', 'w', 'k', 't', 'n', 'y', 'z', 's', 'a', 'x', 'p', 'b', 'q', 'm', 'd', 'r', 'v', 'c', 'h', 'g', 'e'}\n",
+      "Thequickbrownfoxjumpsoverthelazydog\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +490,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "324de15e77500cdceab286e0e96dd8d08cf2c96f064d1d5e7703da7c780728e9"
+   }
   }
  },
  "nbformat": 4,
