--- a/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
+++ b/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
@@ -108,29 +108,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# def animal_crackers(text):\n",
+    "#     wordlist = text.split()\n",
+    "#     return wordlist[0][0] == wordlist[1][0]\n",
+    "\n",
     "def animal_crackers(text):\n",
     "    wordlist = text.split()\n",
-    "    return wordlist[0][0] == wordlist[1][0]"
+    "    print(wordlist)\n",
+    "    first = wordlist[0]\n",
+    "    second = wordlist[1]\n",
+    "\n",
+    "    return first[0] == second[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Levelheaded', 'Llama']\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,19 +189,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# def makes_twenty(n1,n2):\n",
+    "#     return (n1+n2)==20 or n1==20 or n2==20\n",
+    "\n",
     "def makes_twenty(n1,n2):\n",
-    "    return (n1+n2)==20 or n1==20 or n2==20"
+    "    if n1 + n2 == 20:\n",
+    "        return True\n",
+    "    elif n1 == 20:\n",
+    "        return True\n",
+    "    elif n2 == 20:\n",
+    "        return True \n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +220,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +241,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,22 +292,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# def old_macdonald(name):\n",
+    "#     if len(name) > 3:\n",
+    "#         return name[:3].capitalize() + name[3:].capitalize()\n",
+    "#     else:\n",
+    "#         return 'Name is too short!'\n",
+    "\n",
     "def old_macdonald(name):\n",
-    "    if len(name) > 3:\n",
-    "        return name[:3].capitalize() + name[3:].capitalize()\n",
-    "    else:\n",
-    "        return 'Name is too short!'"
+    "\n",
+    "    first_letter = name[0]\n",
+    "    inbetween = name[1:3]\n",
+    "    fourth_letter = name[3]\n",
+    "    rest = name[4:]\n",
+    "\n",
+    "    return first_letter.upper() + inbetween + fourth_letter.upper() + rest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +325,7 @@
        "'MacDonald'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,19 +347,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# def master_yoda(text):\n",
+    "#     return ' '.join(text.split()[::-1])\n",
     "def master_yoda(text):\n",
-    "    return ' '.join(text.split()[::-1])"
+    "    wordlist = text.split()\n",
+    "    reversed_wordlist = wordlist[::-1]\n",
+    "    return ' '.join(reversed_wordlist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +372,7 @@
        "'home am I'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +393,7 @@
        "'ready are We'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.2 (main, Mar 27 2023, 15:03:16) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "vscode": {
    "interpreter": {
