--- a/02-Python Statements/05-Useful-Operators.ipynb
+++ b/02-Python Statements/05-Useful-Operators.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Useful Operators\n",
     "\n",
-    "There are a few built-in functions and \"operators\" in Python that don't fit well into any category, so we will go over them in this lecture, let's begin!"
+    "There are a few built-in functions and \"operators\" in Python that don't fit that well into any category, so we will go over them in this lecture, let's begin!"
    ]
   },
   {
